--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,7 +19,10 @@
         android:id="@+id/detailFragment"
         android:name="com.example.tokenlabapp.detail.DetailFragment"
         android:label="fragment_detail">
-
+        <argument
+        android:name="selectedProperty"
+        app:argType="com.example.tokenlabapp.network.MoviesProperty"
+        />
     </fragment>
 
 </navigation>
